update production database name

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: flight_booker_production
+  database: westcoastflightsdb
   username: flight_booker
   password: <%= ENV["FLIGHT_BOOKER_DATABASE_PASSWORD"] %>
